--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -32,7 +32,7 @@
     </div>
     <div class="form-group">
         <label>Registration Required
-            <input type="checkbox" class="form-control">
+            <input type="checkbox" th:field="${event.registrationRequired}" class="form-control">
         </label>
         <p class="error" th:errors="${event.registrationRequired}"></p>
     </div>
