--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -25,13 +25,14 @@
         <p class="error" th:errors="${event.contactEmail}"></p>
     </div>
     <div class="form-group">
-        <label>Type
-        <select th:field="${event.category}">
-            <option th:each="category : ${categories}"
-                    th:value="${category}"
-                    th:text="${category.name}"
+        <label>Category
+        <select th:field="${event.eventCategory}">
+            <option th:each="eventCategory : ${categories}"
+                    th:value="${eventCategory.id}"
+                    th:text="${eventCategory.name}"
             ></option>
         </select>
+            <p class="error" th:errors="${event.eventCategory}"></p>
         </label>
     </div>
     <div class="form-group">
